# netbox-pdu-manager

./: README.md  pyproject.toml
netbox_pdu_manager/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_pdu_manager/api/: __init__.py  urls.py
netbox_pdu_manager/migrations/: 0001_initial.py
netbox_pdu_manager/templates/netbox_pdu_manager/: outlet.html  pdu.html
